// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapRequested > creates a new deposit channel swap request and creates a pending tx ref record 1`] = `
{
  "address": null,
  "failedVaultSwapId": null,
  "id": Any<Number>,
  "slot": null,
  "swapDepositChannelId": Any<BigInt>,
  "vaultSwapRequestId": null,
}
`;

exports[`swapRequested > creates a new swap request (DEPOSIT_CHANNEL 11000) 1`] = `
{
  "ccmGasBudget": "2",
  "ccmMessage": "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000003f7a400000000000000000000000000000000000000000000000000000000000000074761735465737400000000000000000000000000000000000000000000000000",
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 10,
  "depositAmount": "4999922",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": "3JR4ur5KBq8DPfwajjAYUrbkLKM9",
  "destAsset": "Sol",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 2n,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "4999922",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > creates a new swap request (ON_CHAIN 11000) 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 10,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": "99999994999",
  "fokRefundAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
  "fokRetryDurationBlocks": 100,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 92n,
  "onChainSwapInfo": {
    "accountId": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
    "id": Any<Number>,
    "outputAmount": null,
    "refundAmount": null,
    "swapRequestId": Any<BigInt>,
  },
  "originType": "ON_CHAIN",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": "cFNzKSS48cZ1xQmdub2ykc2LUc5UZS2YjLaZBUvmxoXHjMMVh",
  "srcAsset": "Sol",
  "swapDepositChannelId": null,
  "swapInputAmount": "99999994999",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 100,
}
`;

exports[`swapRequested > creates a new swap request (VAULT 11000) 1`] = `
{
  "beneficiaries": [
    {
      "account": "cFM8kRvLBXagj6ZXvrt7wCM4jGmHvb5842jTtXXg3mRHjrvKy",
      "channelId": null,
      "commissionBps": 100,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "SUBMITTER",
    },
    {
      "account": "cFMYYJ9F1r1pRo3NBbnQDVRVRwY9tYem39gcfKZddPjvfsFfH",
      "channelId": null,
      "commissionBps": 150,
      "id": Any<BigInt>,
      "swapRequestId": Any<BigInt>,
      "type": "AFFILIATE",
    },
  ],
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": 2,
  "dcaNumberOfChunks": 1,
  "depositAmount": "10000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": "2f1e9acbef4360ad0063ad7d3f7f6527a5caccbbee20097f4e045c1482a67aad",
  "destAddress": "0xb2806f8993e01460bc2f6e50fab466b5525dbe3a",
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": "3.26183663919595400739649677085384465302843e+41",
  "fokRefundAddress": "mvBcghosEPisgS83icinjHig54bPcPXEwa",
  "fokRetryDurationBlocks": 150,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 1n,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 250,
}
`;

exports[`swapRequested > creates a new vault swap request and creates a pending tx ref record 1`] = `
[
  {
    "address": "HZC6KyQYbxbKGiyWbBrwhxrPPecFi2yKG9jMwFqwNEtJ",
    "failedVaultSwapId": null,
    "id": Any<Number>,
    "slot": 413006n,
    "swapDepositChannelId": null,
    "vaultSwapRequestId": Any<BigInt>,
  },
]
`;

exports[`swapRequested > handles ingress/egress fees 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 388319n,
  "onChainSwapInfo": null,
  "originType": "INTERNAL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "INGRESS_EGRESS_FEE",
  "srcAddress": null,
  "srcAsset": "Usdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "209443",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapRequested > handles network fees 1`] = `
{
  "ccmGasBudget": null,
  "ccmMessage": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "dcaChunkIntervalBlocks": null,
  "dcaNumberOfChunks": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": null,
  "depositFinalisedBlockIndex": null,
  "depositTransactionRef": null,
  "destAddress": null,
  "destAsset": "Flip",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fallbackEgressId": null,
  "fokMinPriceX128": null,
  "fokRefundAddress": null,
  "fokRetryDurationBlocks": null,
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 388320n,
  "onChainSwapInfo": null,
  "originType": "INTERNAL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "NETWORK_FEE",
  "srcAddress": null,
  "srcAsset": "Usdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "209",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-23T13:13:12.002Z,
  "swapRequestedBlockIndex": "87-13",
  "totalBrokerCommissionBps": 0,
}
`;
